--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,17 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;letter-spacing: 0.01em;}
 body.dark{
     background-color: #1D1D1D;
 }
+body.dark .header-block_text,body.dark .header-block_title,body.dark .main-block__text, 
+body.dark .main-block__title,body.dark .header_title,body.dark .our-services__text,
+body.dark .our-services__list,body.dark .first-text, body.dark .second-text, body.dark .menu__link{
+    color: #fff;
+}
+body.dark .header{
+    background-color: #000000;
+}
+body.dark .menu__icon svg path{
+    stroke: var(--color-primary);
+}
 .switch{
     position: fixed;
     width: 100px;
@@ -251,28 +262,40 @@ body.dark{
 }
 .slider{
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     cursor: pointer;
     transition: 0.4s;
     border-radius: 30px;
+    padding: 0 10px;
 }
 .slider::before{
     position: absolute;
-    content: url(/img/dark-mode/Frame.svg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    content: "";
     height: 40px;
     width: 40px;
     border-radius: 20px;
-    left: -45px;
-    top: 50%;
+    left: 6px;
+    top: calc(50% - 2px);
     transform: translateY(-50%);
     transition: 0.4s;
     background-color: var(--color-primary);
 }
-input:checked + .slider{
-    background-color: var(--color-yellow);
-}
 input:checked + .slider::before{
-    left: calc(100% + 10px);
-    content: url(/img/dark-mode/Group.svg);
+    left: calc(100% - 45%);
+}
+input:checked + .slider .icon__moon{
+    stroke: #fff;
+    z-index: 200;
+}
+.icon__sun{
+    z-index: 200;
+}
+.icon__moon{
 }
 /*---------------slider---------------*/
 .swiper{
@@ -319,6 +342,10 @@ input:checked + .slider::before{
     box-sizing: content-box;
     outline: 1px solid var(--color-primary);
     border: 4px solid #fff;
+    
+}
+body.dark .swiper-pagination-bullet-active{
+    border: 4px solid #1D1D1D;
 }
 /*----------------burger menu---------------------*/
 
@@ -365,7 +392,7 @@ input:checked + .slider::before{
 .menu__link-mob{
     color: black;
 }
-.buuton__header-mob{
+.button__header-mob{
     margin-bottom: 46px;
 }
 .header__contact-mob{
@@ -390,6 +417,7 @@ input:checked + .slider::before{
 body{
     position: relative;
     transition: 0.4s;
+    
 }
 .wrapper{
     position: relative;
@@ -689,6 +717,7 @@ img{
 }
 .our-team__video img{
     width: 100%;
+    margin-right: 20px;
 }
 .our-team__items{
     width: 50%;
@@ -718,6 +747,11 @@ img{
 .button__primary:not(:last-child){
     margin: 0px 10px 0px 0px;
 }
+@media (max-width:1150px) {
+    .our-team__video{
+        margin-right: 15px;
+    }
+}
 @media(max-width:830px){
     .our-team__column{
         flex-direction: column-reverse;
@@ -727,6 +761,7 @@ img{
     }
     .our-team__video{
         width: 100%;
+        margin-top: 15px;
     }
 }
 @media(max-width:480px){
@@ -1208,7 +1243,7 @@ img{
         transform: rotate(360deg);
     }
     100%{
-        left: 100%;
+        left: 90%;
     }
 }
 @keyframes bouble-rigth{
@@ -1220,7 +1255,7 @@ img{
         transform: rotate(360deg);
     }
     100%{
-        right: 100%;
+        right: 90%;
     }
 }
 @keyframes bouble-top{
@@ -1232,7 +1267,7 @@ img{
         transform: rotate(360deg);
     }
     100%{
-        top: 100%;
+        top: 90%;
     }
 }
 @keyframes bouble-bottom{
